refactor. 장소, 메뉴 로마표기 추가